# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Mesh.h  Model.h  Shader.h  shader.h
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  lighting.fs  lighting.vs  main.cpp  model.fs  model.vs  shader.cpp  shader.fs  shader.vs
